# Project-DataStructure

./: arvore_AVL.c  arvore_AVL.h  fila_de_prioridade.c  fila_de_prioridade.h  lista_com_vetor.c  lista_com_vetor.h  lista_dupla.c  lista_dupla.h  main.c  merge_sort.c  merge_sort.h  quick_sort.c
OneDrive/Desktop/ED-Projeto/: CMakeLists.txt
OneDrive/Documentos/Unreal Projects/VR%20UE5/: .gitattributes
